
- added getTagAttrib() helper (#97)
- fixed shared library names and sonames on Solaris to use only one version
  number: use libfoo.so.1 for the file and the soname and libfoo.so for the
  only symlink
- msvs2008prj: fixed MIDL compiler settings
- autoconf, gnu: fixed pkgconfig module to respect DESTDIR (#248)


Version 0.2.6
-------------

- autoconf: fixed dependencies support for traditional Unix compilers
- autoconf: correct shared library extension under HP-UX ia64
- autoconf: added support for new (10 and 11) Intel C/C++ compiler versions
- watcom: fixes for OpenWatcom 1.8 (Jiri Malak, #238)
- fixed assert failure with wxWidgets' presets (#230)
- msvs*prj: pass preprocessor flags to IDL compiler (#240)
- msvs*prj: define WIN32 preprocessor symbol
- fixed 100% CPU usage in bakefile_gen
- added <debug-info-edit-and-continue> tag to support Visual Studio
  debugger's Edit and Continue feature
- msvs*prj: allow overriding names of .vcproj files using MSVS_PROJECT_FILE
  variable (#224)


Version 0.2.5
-------------

- msvs2003prj, msvs2005prj: fixed PCH handling broken in 0.2.4
- mingw: fixed C compiler invocation broken in 0.2.4 (#231)


Version 0.2.4
--------------

- msvs200xprj: if "-o foo.vcproj" is specified on the command line, only
  generate foo.vcproj and not foo.sln (#174)
- autoconf: fixes for non-default BUILDDIR
- msvs2005prj: fixed _WIN32_WCE define for PocketPC 2003 platform (#187)
- put user- or configure-provided LDFLAGS and LIBS to the end of linker
  command line to avoid conflicts of local libraries with system-wide (#182)
- xcode2: fixed <ldflags> to not delete previously specified flags (#192)
- xcode2: fixed <cxxflags> and <cppflags> for C++ files (Scott Bailey, #194)
- xcode2: fixed <library> handling (Scott Bailey, #199)
- added <depends-on-file> to all formats, with warnings if it's not
  implemented (#190)
- mingw, gnu: avoid "No rule to make target ..." errors in generated makefiles
  when dependency header is removed (#201)